--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2006-01-23 10:34+0100\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -22,19 +22,19 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "Ein Element wurde unerwartet entfernt: \"%s\"."
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "Entferne \"%s\"?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Xfce Panel"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
@@ -42,33 +42,34 @@ msgstr ""
 "verloren."
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "Eigenschaften"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "Über"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 msgid "Move"
 msgstr "Verschieben"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "Entfernen"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 msgid "Add New Item"
 msgstr "Neues Objekt hinzufügen"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr "Leiste einrichten"
 
@@ -317,18 +318,58 @@ msgstr "Bildschirm sperren"
 msgid "Quit + Lock screen"
 msgstr "Abmelden + Bildschirm sperren"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "Trennlinie"
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%A, %d. %B %Y"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "_Trennlinie zeichnen"
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "Uhr"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "_Ausdehnen"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "Aussehen"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "Analog"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "Digital"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "LED"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "_Rahmen anzeigen"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "Einstellungen für die Uhr"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "24-_Stunden Uhr verwenden"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "AM/PM anzeigen"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "Sekunden anzeigen"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -338,6 +379,24 @@ msgstr "Icon Box"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "Nur minimierte Anwendungen anzeigen"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "Konnte \"%s\" nicht ausführen."
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "Neuer Eintrag"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "Diese Eintrag wurde noch nicht bearbeitet"
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "Neuer Eintrag"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -423,11 +482,6 @@ msgstr "In _Terminal ausführen"
 msgid "Use _startup notification"
 msgstr "Benutze _Startup Notifikation"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "Neuer Eintrag"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -444,72 +498,6 @@ msgstr "Programmstarter"
 msgid "Select file"
 msgstr "Datei auswählen"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "Konnte \"%s\" nicht ausführen."
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "Diese Eintrag wurde noch nicht bearbeitet"
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "Neuer Eintrag"
-
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%A, %d. %B %Y"
-
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "Uhr"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "Aussehen"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "Analog"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "Digital"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "LED"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "_Rahmen anzeigen"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "Einstellungen für die Uhr"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "24-_Stunden Uhr verwenden"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "AM/PM anzeigen"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "Sekunden anzeigen"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Pager"
@@ -521,6 +509,27 @@ msgstr "Anzahl der Zeilen:"
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "Anzahl der Spalten:"
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "Trennlinie"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "_Trennlinie zeichnen"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "_Ausdehnen"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -569,6 +578,24 @@ msgstr "Tasks automatisch gruppieren"
 msgid "Always group tasks"
 msgstr "Tasks immer gruppieren"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr "Aktive Knöpfe"
@@ -577,10 +604,9 @@ msgstr "Aktive Knöpfe"
 msgid "Log out or lock the screen"
 msgstr "Abmelden oder Desktop sperren"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr ""
-"Fügt zusätzlichen Freiraum oder eine Linie zwischen Leistenelementen ein"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "Wieviel Uhr ist es?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -594,13 +620,22 @@ msgstr "Starter"
 msgid "Program launcher with optional menu"
 msgstr "Programmstarter mit optionalem Menü"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "Wieviel Uhr ist es?"
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr "Miniaturansicht aller virtueller Desktops"
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr ""
+"Fügt zusätzlichen Freiraum oder eine Linie zwischen Leistenelementen ein"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
+msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -609,6 +644,10 @@ msgstr "Symbole für Benchrichtigungen anzeigen"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "Alle laufenden Anwendungen anzeigen"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
