--- a/po/el.po
+++ b/po/el.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2006-01-05 22:54+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
@@ -21,19 +21,19 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "Ένα αντικείμενο αφαιρέθηκε αναπάντεχα: \"%s\"."
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "Να διαγραφεί το \"%s\";"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Ταμπλώ του Xfce"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
@@ -41,33 +41,34 @@ msgstr ""
 "χαθούν."
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "Ιδιότητες"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "Περί"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 msgid "Move"
 msgstr "Μετακίνηση"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "Απομάκρυνση"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 msgid "Add New Item"
 msgstr "Νέο Αντικείμενο"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr "Προσαρμογή Ταμπλό"
 
@@ -318,18 +319,58 @@ msgstr "Κλείδωμα οθόνης"
 msgid "Quit + Lock screen"
 msgstr "Έξοδος + Κλείδωμα οθόνης"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "Διαχωριστικό"
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%A, %d %B %Y"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "Εμφάνιση διαχωριστικού"
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "Ρολόι"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "_Επέκταση"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "Εμφάνιση"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "Αναλογικό"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "Ψηφιακό"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "LED"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "Εμ_φάνιση πλαισίου"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "Επιλογές Ρολογιού"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "Χρήση 24ώρου ρολογιού"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "Προβολ ΠΜ/ΜΜ"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "Προβολή δεπτερολέπτων"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -339,6 +380,24 @@ msgstr "Εικονοθήκη"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "Εμφάνιση μόνο ελαχιστοποιημένων εφαρμογών"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "Αδυναμία εκτέλεσης \"%s\""
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "Νέο Αντικείμενο"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "Αυτό το αντικείμενο δεν έχει ρυθμιστεί ακόμα "
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "Νέο αντικείμενο"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -424,11 +483,6 @@ msgstr "Εκτέλεση σε _τερματικό"
 msgid "Use _startup notification"
 msgstr "Χρήση γνω_στοποίηση εκκίνησης"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "Νέο Αντικείμενο"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -445,72 +499,6 @@ msgstr "Εκκινητής Προγράμματος"
 msgid "Select file"
 msgstr "Επιλογή αρχείου"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "Αδυναμία εκτέλεσης \"%s\""
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "Αυτό το αντικείμενο δεν έχει ρυθμιστεί ακόμα "
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "Νέο αντικείμενο"
-
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
-
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "Ρολόι"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "Εμφάνιση"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "Αναλογικό"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "Ψηφιακό"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "LED"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "Εμ_φάνιση πλαισίου"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "Επιλογές Ρολογιού"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "Χρήση 24ώρου ρολογιού"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "Προβολ ΠΜ/ΜΜ"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "Προβολή δεπτερολέπτων"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Ειδοποιητής"
@@ -522,6 +510,27 @@ msgstr "Αριθμός γραμμών:"
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "Αριθμός στηλών:"
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "Διαχωριστικό"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "Εμφάνιση διαχωριστικού"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "_Επέκταση"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -570,6 +579,24 @@ msgstr "Αυτόματη ομαδοποίηση εργασιών"
 msgid "Always group tasks"
 msgstr "Πάντα ομαδοποίηση εργασιών"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr ""
@@ -578,9 +605,9 @@ msgstr ""
 msgid "Log out or lock the screen"
 msgstr "Αποσύνδεση ή κλείδωμα οθόνης"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "Προσθέτει ένα κενό ή μια γραμμή μεταξύ των αντικειμένων του ταμπλό"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "Τι ώρα είναι;"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -594,13 +621,21 @@ msgstr "Εκκινητής"
 msgid "Program launcher with optional menu"
 msgstr "Εκκινητής προγραμμάτων με προαιρετικό μενού"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "Τι ώρα είναι;"
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr "Μικρογραφίες όλων των εικονικών επιφανειών εργασίας"
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "Προσθέτει ένα κενό ή μια γραμμή μεταξύ των αντικειμένων του ταμπλό"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
+msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -609,6 +644,10 @@ msgstr "Εμφάνιση εικονιδίων ειδοποίησης"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "Εμφάνιση όλων των εκτελούμενων εφαρμογών"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
