--- a/po/es.po
+++ b/po/es.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2005-11-07 22:12+0900\n"
 "Last-Translator: Rudy Godoy <rudy@kernel-panik.org>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -22,53 +22,54 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "Se ha eliminado un elemento de forma inesperada: «%s»."
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "¿Eliminar «%s»?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Panel de Xfce"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr "El elemento se elimará del panel y se perderá su configuración."
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "Propiedades"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "Acerca de"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 #, fuzzy
 msgid "Move"
 msgstr "Eliminar"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "Eliminar"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 #, fuzzy
 msgid "Add New Item"
 msgstr "Nuevo elemento"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr "Personalizar panel"
 
@@ -320,18 +321,58 @@ msgstr "Bloquear pantalla"
 msgid "Quit + Lock screen"
 msgstr "Salir y bloquear pantalla"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "Separador"
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%A %d %B %Y"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "_Dibujar separador"
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "Reloj"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "_Expandir"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "Aspecto"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "Analógico"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "Dígital"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "LED"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "Mostrar _cuadro"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "Opciones de reloj"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "Usar reloj de 24 _horas"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "Mostrar AM/PM"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "Mostrar segundos"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -341,6 +382,24 @@ msgstr "Caja de iconos"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "Mostrar únicamente aplicaciones minimizadas"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "No se pudo ejecutar «%s»."
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "Nuevo elemento"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "Todavía no se ha configurado este elemento"
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "Nuevo elemento"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -426,11 +485,6 @@ msgstr "Ejecutar en _terminal"
 msgid "Use _startup notification"
 msgstr "U_sar notificación de arranque"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "Nuevo elemento"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -447,72 +501,6 @@ msgstr "Lanzador de programas"
 msgid "Select file"
 msgstr "Elegir archivo"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "No se pudo ejecutar «%s»."
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "Todavía no se ha configurado este elemento"
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "Nuevo elemento"
-
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%A %d %B %Y"
-
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "Reloj"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "Aspecto"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "Analógico"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "Dígital"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "LED"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "Mostrar _cuadro"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "Opciones de reloj"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "Usar reloj de 24 _horas"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "Mostrar AM/PM"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "Mostrar segundos"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Paginador"
@@ -524,6 +512,27 @@ msgstr "Número de filas:"
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "Número de columnas"
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "Separador"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "_Dibujar separador"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "_Expandir"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -572,6 +581,24 @@ msgstr "Agrupar tareas automáticamente"
 msgid "Always group tasks"
 msgstr "Siempre agrupar tareas"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr ""
@@ -580,9 +607,9 @@ msgstr ""
 msgid "Log out or lock the screen"
 msgstr "Salir y bloquear la pantalla"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "Añade un espacio o una línea entre elementos del panel"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "¿Qué hora es?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -596,13 +623,21 @@ msgstr "Lanzador"
 msgid "Program launcher with optional menu"
 msgstr "Lanzador de programa con menú opcional"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "¿Qué hora es?"
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr "Vista en miniatura de todos los escritorios virtuales"
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "Añade un espacio o una línea entre elementos del panel"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
+msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -611,6 +646,10 @@ msgstr "Mostrar iconos de notificación"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "Mostrar todas las aplicaciones en ejecución"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
