--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2005-11-04 17:27+0900\n"
 "Last-Translator: Collet Etienne <xanaxlnx@gmail.com>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -22,53 +22,54 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "L'élément a été inopinément enlevé : \"%s\"."
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "Supprimer \"%s\"?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Panneau Xfce"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr "L'élément sera enlevé du panneau et sa configuration sera perdue."
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "Propriétés"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "A propos"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 #, fuzzy
 msgid "Move"
 msgstr "Supprimer"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "Supprimer"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 #, fuzzy
 msgid "Add New Item"
 msgstr "Ajouter un élément"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr "Configurer Le Pannneau"
 
@@ -324,18 +325,58 @@ msgstr "Verrouiller l'écran"
 msgid "Quit + Lock screen"
 msgstr "Quitter + Verrouiller l'écran"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "Séparation"
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%A, %d %B %Y"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "Séparation"
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "Horloge"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "_Étendre"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "Apparence"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "Analogique"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "Numérique"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "LED"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "Montrez l'_armature"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "Options De L'Horloge"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "Utilisez 24 heure dans l'horloge"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "Montrer AM/PM"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "Montrer les secondes"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -345,6 +386,24 @@ msgstr "Boite À Icônes"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "Montrez seulement les applications réduites au minimum"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "Impossible de lancer \"%s\"."
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "Ajouter un élément"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "Cette élément n'a pas d'option de configuration"
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "Ajouter un nouveau élément"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -430,11 +489,6 @@ msgstr "Exécuter dans un _terminal"
 msgid "Use _startup notification"
 msgstr "Utiliser la _notification de démarrage"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "Ajouter un élément"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -451,72 +505,6 @@ msgstr "Lanceur De Programme"
 msgid "Select file"
 msgstr "Sélection de fichier"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "Impossible de lancer \"%s\"."
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "Cette élément n'a pas d'option de configuration"
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "Ajouter un nouveau élément"
-
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
-
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "Horloge"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "Apparence"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "Analogique"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "Numérique"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "LED"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "Montrez l'_armature"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "Options De L'Horloge"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "Utilisez 24 heure dans l'horloge"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "Montrer AM/PM"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "Montrer les secondes"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Bureaux"
@@ -528,6 +516,27 @@ msgstr "Nombre de lignes :"
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "Nombre de colonnes :"
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "Séparation"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "Séparation"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "_Étendre"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -578,6 +587,24 @@ msgstr "Re_grouper automatiquement les tâches"
 msgid "Always group tasks"
 msgstr "Toujours re_grouper les tâches"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr ""
@@ -586,9 +613,9 @@ msgstr ""
 msgid "Log out or lock the screen"
 msgstr "Déconnection ou verrouillage de l'écran"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "Ajoute un espace ou une ligne entre les éléments du panneau"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "Quelle heure est-il ?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -602,13 +629,21 @@ msgstr "Lanceur"
 msgid "Program launcher with optional menu"
 msgstr "Lanceur de programme avec le menu facultatif"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "Quelle heure est-il ?"
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr "Vue miniature des bureaux virtuels"
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "Ajoute un espace ou une ligne entre les éléments du panneau"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
+msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -617,6 +652,10 @@ msgstr "Montrez la notification des icônes"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "Montrez toutes les applications courantes"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
