--- a/po/ko.po
+++ b/po/ko.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2005-11-02 02:03+0900\n"
 "Last-Translator: ByungHyun Choi <byunghyun.choi@gmail.com>\n"
 "Language-Team: xfce4-users-kr-i18n <xfce4-users-kr-i18n@lists.sourceforge."
@@ -22,53 +22,54 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "\"%s\"가(이) 느닷없이 삭제되었습니다."
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "\"%s\"를 삭제할까요?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Xfce 패널"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr "해당 아이템을 패널에서 삭제하고 설정도 없앱니다."
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "속성"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "패널에 대하여..."
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 #, fuzzy
 msgid "Move"
 msgstr "삭제"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "삭제"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 #, fuzzy
 msgid "Add New Item"
 msgstr "새로운 항목"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr ""
 
@@ -318,18 +319,58 @@ msgstr "화면잠금"
 msgid "Quit + Lock screen"
 msgstr "종료 + 화면잠금(_L)"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "분리표시"
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%Y-%m-%d %A"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "분리표시 추가(_D)"
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "시계"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "확장(_E)"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "겉 모습"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "아날로그"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "디지탈"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "전광판"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "틀 보이기(_f)"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "시계 설정"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "24시간 사용(_h)"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "오전/오후 표시"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "초 표시"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -339,6 +380,24 @@ msgstr "아이콘 박스"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "최소화된 것만 보이기"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "\"%s\"를(을) 실행하지 못 했습니다."
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "새로운 항목"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "아직 구성되지 않았습니다."
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "새로운 항목"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -424,11 +483,6 @@ msgstr "터미널에서 실행하기(_t)"
 msgid "Use _startup notification"
 msgstr "시작과 동시에 알림(_s)"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "새로운 항목"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -443,72 +497,6 @@ msgstr "프로그램 실행기"
 msgid "Select file"
 msgstr "화일선택"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "\"%s\"를(을) 실행하지 못 했습니다."
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "아직 구성되지 않았습니다."
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "새로운 항목"
-
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%Y-%m-%d %A"
-
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "시계"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "겉 모습"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "아날로그"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "디지탈"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "전광판"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "틀 보이기(_f)"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "시계 설정"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "24시간 사용(_h)"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "오전/오후 표시"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "초 표시"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "페이저"
@@ -520,6 +508,27 @@ msgstr "몇 줄:"
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "몇 열:"
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "분리표시"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "분리표시 추가(_D)"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "확장(_E)"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -568,6 +577,24 @@ msgstr "같은 태스크를 자동으로 모으기"
 msgid "Always group tasks"
 msgstr "같은 태스크는 항상 모으기"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr ""
@@ -576,9 +603,9 @@ msgstr ""
 msgid "Log out or lock the screen"
 msgstr "종료 아니면 화면 잠금"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "항목 사이에 빈 공간이나 줄을 추가"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "몇 시죠?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -592,13 +619,21 @@ msgstr "실행기"
 msgid "Program launcher with optional menu"
 msgstr "선택 메뉴가 있는 실행기"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "몇 시죠?"
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr "모든 작업 공간에 대해 쬐만하게 보이기"
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "항목 사이에 빈 공간이나 줄을 추가"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
+msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -607,6 +642,10 @@ msgstr "알림 아이콘 보이기"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "실행 중인 프로그램 보이기"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
