--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2006-01-15 10:33+0100\n"
 "Last-Translator: Piotr Maliński <riklaunim@gmail.com>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -24,51 +24,52 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "Obiekt \"%s\" został niespodziewanie usunięty."
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "Usunąć element %s?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Panel Xfce"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr "Obiekt zostanie usunięty wraz z konfiguracją"
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "Opcje"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "O obiekcie"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 msgid "Move"
 msgstr "Przesuń"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "Usuń"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 msgid "Add New Item"
 msgstr "Nowy element"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr "Dopasuj Palej"
 
@@ -318,18 +319,58 @@ msgstr "Zablokuj ekran"
 msgid "Quit + Lock screen"
 msgstr "Wyjdź i Zablokuj ekran"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "Separator"
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%A, %e %B %Y"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "_Separator"
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "Zegar"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "_Rozciągnij"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "Wygląd"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "Analogowy"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "Cyfrowy"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "LED"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "Pokaż _ramkę"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "Opcję Zegara"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "Użyj trybu 24-_godzinnego"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "AM/PM"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "Pokaż zegar przed ikonami"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -339,6 +380,26 @@ msgstr "Boks Ikon"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "Pokazuj tylko zminimalizowane aplikacje"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, fuzzy, c-format
+msgid "Could not run \"%s\""
+msgstr ""
+"Błąd uruchomienia \"%s\":\n"
+"%s"
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "Nowy element"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "Ten element nie został jeszcze skonfigurowany"
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "Nowy element"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -424,11 +485,6 @@ msgstr "Uruchom w _terminalu"
 msgid "Use _startup notification"
 msgstr "Użyj p_owiadomienia o uruchamianiu"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "Nowy element"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -445,74 +501,6 @@ msgstr "Aktywator"
 msgid "Select file"
 msgstr "Wybierz plik"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, fuzzy, c-format
-msgid "Could not run \"%s\""
-msgstr ""
-"Błąd uruchomienia \"%s\":\n"
-"%s"
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "Ten element nie został jeszcze skonfigurowany"
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "Nowy element"
-
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%A, %e %B %Y"
-
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "Zegar"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "Wygląd"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "Analogowy"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "Cyfrowy"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "LED"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "Pokaż _ramkę"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "Opcję Zegara"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "Użyj trybu 24-_godzinnego"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "AM/PM"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "Pokaż zegar przed ikonami"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Pager"
@@ -524,6 +512,27 @@ msgstr "Ilość wierszy:"
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "Ilość kolumn:"
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "Separator"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "_Separator"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "_Rozciągnij"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -572,6 +581,24 @@ msgstr "Automatycznie grupuj zadania"
 msgid "Always group tasks"
 msgstr "Zawsze grupuj zadania"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr "Przyciski Akcji"
@@ -580,9 +607,9 @@ msgstr "Przyciski Akcji"
 msgid "Log out or lock the screen"
 msgstr "Zablokuj ekran"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "Dodaj spację lub linię pomiędzy elementami panelu"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr ""
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -596,12 +623,20 @@ msgstr "Aktywator"
 msgid "Program launcher with optional menu"
 msgstr ""
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr ""
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
+msgstr ""
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "Dodaj spację lub linię pomiędzy elementami panelu"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
 msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
@@ -611,6 +646,10 @@ msgstr "Pokaż ikony powiadomie_nia"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "P_okazuj tylko zminimalizowane aplikacje"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
