--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"POT-Creation-Date: 2006-01-29 18:45+0100\n"
 "PO-Revision-Date: 2005-10-11 00:00+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -23,53 +23,54 @@ msgstr ""
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "所有的項目意外地被移除了: \"%s\" 。"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "移除 \"%s\" 項目？"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
 #: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Xfce 面板"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr "這個項目將會從面板中移除，其設定將會遺失"
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
-#: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:732
+#: ../plugins/actions/actions.c:309 ../plugins/clock/clock.c:408
 #: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
-#: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
+#: ../plugins/pager/pager.c:298 ../plugins/separator/separator.c:255
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
+#: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
 msgstr "特性"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
 msgstr "關於"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 #, fuzzy
 msgid "Move"
 msgstr "移除"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:784
 msgid "Remove"
 msgstr "移除"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:801
 #, fuzzy
 msgid "Add New Item"
 msgstr "新增項目"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
 msgstr ""
 
@@ -323,18 +324,62 @@ msgstr "鎖住螢幕"
 msgid "Quit + Lock screen"
 msgstr "離開並鎖住螢幕"
 
-#: ../plugins/separator/separator.c:271
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "分隔線"
+# NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
+# NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
+# NOTE 詳情請參見 http://bugzilla.xfce.org/show_bug.cgi?id=332
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%Y年%B月%d日　%A"
 
-#: ../plugins/separator/separator.c:284
-msgid "_Draw Separator"
-msgstr "畫分隔線(_D)"
+#  set names to use in option menus
+#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "時鐘"
 
-#: ../plugins/separator/separator.c:293
-msgid "_Expand"
-msgstr "延展(_E)"
+#: ../plugins/clock/clock.c:431
+msgid "Appearance"
+msgstr "外觀"
+
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:446
+msgid "Analog"
+msgstr "指針式"
+
+#: ../plugins/clock/clock.c:447
+msgid "Digital"
+msgstr "數位式"
+
+#: ../plugins/clock/clock.c:448
+msgid "LED"
+msgstr "數位液晶顯示"
+
+#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
+msgid "Show _frame"
+msgstr "顯示架構(_F)"
+
+#: ../plugins/clock/clock.c:461
+msgid "Clock Options"
+msgstr "時鐘選項"
+
+#: ../plugins/clock/clock.c:471
+msgid "Use 24-_hour clock"
+msgstr "使用24小時制(_H)"
+
+#: ../plugins/clock/clock.c:479
+msgid "Show AM/PM"
+msgstr "顯示 上午/下午"
+
+#: ../plugins/clock/clock.c:487
+msgid "Display seconds"
+msgstr "顯示秒"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -344,6 +389,24 @@ msgstr "圖示盒"
 #: ../plugins/iconbox/iconbox.c:822
 msgid "Only show minimized applications"
 msgstr "只顯示最小化的應用程式"
+
+#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "無法執行\"%s\""
+
+#: ../plugins/launcher/launcher.c:578
+#: ../plugins/launcher/launcher-dialog.c:1121
+msgid "New Item"
+msgstr "新增項目"
+
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
+msgid "This item has not yet been configured"
+msgstr "該項目尚未設定"
+
+#: ../plugins/launcher/launcher.c:1157
+msgid "New item"
+msgstr "增加新項目"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -430,11 +493,6 @@ msgstr "在終端機中執行(_T)"
 msgid "Use _startup notification"
 msgstr "使用啟動提示(_S)"
 
-#: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:578
-msgid "New Item"
-msgstr "新增項目"
-
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -449,76 +507,6 @@ msgstr "程式啟動器"
 msgid "Select file"
 msgstr "選擇檔案"
 
-#: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "無法執行\"%s\""
-
-#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-msgid "This item has not yet been configured"
-msgstr "該項目尚未設定"
-
-#: ../plugins/launcher/launcher.c:1157
-msgid "New item"
-msgstr "增加新項目"
-
-# NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
-# NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
-# NOTE 詳情請參見 http://bugzilla.xfce.org/show_bug.cgi?id=332
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%Y年%B月%d日　%A"
-
-#  set names to use in option menus
-#: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "時鐘"
-
-#: ../plugins/clock/clock.c:431
-msgid "Appearance"
-msgstr "外觀"
-
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:446
-msgid "Analog"
-msgstr "指針式"
-
-#: ../plugins/clock/clock.c:447
-msgid "Digital"
-msgstr "數位式"
-
-#: ../plugins/clock/clock.c:448
-msgid "LED"
-msgstr "數位液晶顯示"
-
-#: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-msgid "Show _frame"
-msgstr "顯示架構(_F)"
-
-#: ../plugins/clock/clock.c:461
-msgid "Clock Options"
-msgstr "時鐘選項"
-
-#: ../plugins/clock/clock.c:471
-msgid "Use 24-_hour clock"
-msgstr "使用24小時制(_H)"
-
-#: ../plugins/clock/clock.c:479
-msgid "Show AM/PM"
-msgstr "顯示 上午/下午"
-
-#: ../plugins/clock/clock.c:487
-msgid "Display seconds"
-msgstr "顯示秒"
-
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "頁面切換器"
@@ -530,6 +518,27 @@ msgstr "行數："
 #: ../plugins/pager/pager.c:338
 msgid "Number of columns:"
 msgstr "列數："
+
+#: ../plugins/separator/separator.c:271
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "分隔線"
+
+#: ../plugins/separator/separator.c:284
+msgid "_Draw Separator"
+msgstr "畫分隔線(_D)"
+
+#: ../plugins/separator/separator.c:293
+msgid "_Expand"
+msgstr "延展(_E)"
+
+#: ../plugins/showdesktop/showdesktop.c:63
+msgid "Restore hidden windows"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.c:64
+msgid "Hide windows and show desktop"
+msgstr ""
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -578,6 +587,24 @@ msgstr "自動將工作分門別類"
 msgid "Always group tasks"
 msgstr "總是將工作分門別類"
 
+#: ../plugins/windowlist/windowlist.c:249
+#: ../plugins/windowlist/windowlist.c:480
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:2
+msgid "Window List"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:348
+msgid "Add workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:358
+msgid "Delete workspace"
+msgstr ""
+
+#: ../plugins/windowlist/windowlist.c:493
+msgid "Include all Workspaces"
+msgstr ""
+
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr ""
@@ -586,9 +613,9 @@ msgstr ""
 msgid "Log out or lock the screen"
 msgstr "登出或鎖住螢幕"
 
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "在面板項目間加入空白或直線"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "現在幾點？"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -602,13 +629,21 @@ msgstr "啟動器"
 msgid "Program launcher with optional menu"
 msgstr "程式啟動器，可附加選單"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "現在幾點？"
-
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr "所有虛擬桌面的最小化檢視"
+
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "在面板項目間加入空白或直線"
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
+msgid "Show Desktop"
+msgstr ""
+
+#: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
+msgid "Toggle desktop show/hide"
+msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -617,6 +652,10 @@ msgstr "顯示通知圖示"
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
 msgstr "顯示所有執行中的應用程式"
+
+#: ../plugins/windowlist/windowlist.desktop.in.in.h:1
+msgid "Show list of available windows"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
