[I18n] Basque translation upgrade
(Old svn revision: 19668)

--- a/po/eu.po
+++ b/po/eu.po
@@ -184,19 +184,16 @@ msgid "Avalaible Items"
 msgstr "Elementu erabilgarriak"
 
 #: ../panel/panel-dialogs.c:852 ../panel/panel-dialogs.c:1075
-#, fuzzy
 msgid "Normal Width"
-msgstr "_Zabalera osoa"
+msgstr "Zabalera Arrunta"
 
 #: ../panel/panel-dialogs.c:854 ../panel/panel-dialogs.c:1077
-#, fuzzy
 msgid "Full Width"
-msgstr "_Zabalera osoa"
+msgstr "Zabalera Osoa"
 
 #: ../panel/panel-dialogs.c:860 ../panel/panel-dialogs.c:1083
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Monitorea Aukeratu"
+msgstr "Monitoreak Hedatu"
 
 #: ../panel/panel-dialogs.c:920 ../panel/panel-dialogs.c:1148
 msgid "Left"
@@ -526,11 +523,11 @@ msgstr "_Zabaldu"
 
 #: ../plugins/showdesktop/showdesktop.c:63
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "Ezkutatuko leihoa berrezarri"
 
 #: ../plugins/showdesktop/showdesktop.c:64
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "Leihoan ezkutatu eta idazmahaia bistarazi"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -553,11 +550,11 @@ msgstr "Zeregin zerrenda"
 
 #: ../plugins/tasklist/tasklist.c:439
 msgid "Minimum Width:"
-msgstr ""
+msgstr "Gutxieneko Zabalera:"
 
 #: ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
-msgstr ""
+msgstr "Erabilgarri dagoen leku dena erabili"
 
 #: ../plugins/tasklist/tasklist.c:471
 msgid "Show tasks from _all workspaces"
@@ -583,19 +580,19 @@ msgstr "Beti _taldekatu lanak"
 #: ../plugins/windowlist/windowlist.c:480
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "Leiho Zerrenda"
 
 #: ../plugins/windowlist/windowlist.c:348
 msgid "Add workspace"
-msgstr ""
+msgstr "Idazmahai gehitu"
 
 #: ../plugins/windowlist/windowlist.c:358
 msgid "Delete workspace"
-msgstr ""
+msgstr "Idazmahai ezabatu"
 
 #: ../plugins/windowlist/windowlist.c:493
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "Idazmahai guztiak barne"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -631,11 +628,11 @@ msgstr "Panel elementuen artean lekua edo lerro bat gehitu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "Idazmahaia bitarazi"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "Idazmahai ezkutatu/bistarazi txandakatu"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -647,7 +644,7 @@ msgstr "Bistarazi abiarazirik dauden aplikazio guztiak"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Leiho erabilgarri zerrenda bistarazi"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
